<resources>
    <string name="app_name">Neurosense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="error">Error finding image</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="sense">sense</string>
    <string name="neuro">neuro</string>
    <string name="brief_description_neuroscience">Whether you’re a high level researcher or a member of the general public, neurosense can show you new ways of understanding the brain.</string>
    <string name="welcome">Welcome!</string>
    <string name="exit_text">ⓧ</string>
    <string name="access_again">You can access the following explanation again through the \"About App\" button in the menu</string>
    <string name="sounds">Sounds</string>
    <string name="try_it_out">Try it out</string>
    <string name="now_you_can_see_the_receptive_fields_generated_from_images_and_audio_clips_that_match_the_ones_made_by_neurons_in_your_brain">Now you can see the receptive fields generated from images and audio clips that match the ones made by neurons in your brain!</string>
    <string name="person_speaking">person_speaking</string>
    <string name="three_by_three_squares_black">3_by_3_squares_black</string>
    <string name="whether_you_re_a_high_level_researcher_or_a_member_of_the_general_public_neurosense_can_show_you_new_ways_of_understanding_the_brain">Whether you’re a high level researcher or a member of the general public, neurosense can show you new ways of understanding the brain.</string>
    <string name="you_can_access_the_following_explanation_again_through_the_quot_about_app_quot_button_in_the_menu">You can access the following explanation again through the \"About App\" button in the menu</string>
    <string name="neuro_sense_image">neuro_sense_image</string>
    <string name="efficient_coding">Efficient Coding:</string>
    <string name="images">Images</string>
    <string name="about_receptive_fields">See what the receptive fields generated by your brain look like when viewing different images.</string>
    <string name="choose_an_image">Choose an image to be processed \nor take a new one:</string>
    <string name="brain_with_neurons">Brain With Neurons Image</string>
    <string name="view_closer">View Closer</string>
    <string name="home_button">Home Button</string>

</resources>