<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        tools:context=".WelcomeActivity">

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="278dp"
            android:layout_height="50dp"
            android:layout_marginBottom="564dp"
            android:fontFamily="@font/avenir"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="40sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image_neurosense"
            android:layout_width="325dp"
            android:layout_height="160dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/neuro_sense_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome"
            app:layout_constraintVertical_bias="0.034"
            app:srcCompat="@drawable/neurosensel" />

        <TextView
            android:id="@+id/brief_description_neuroscience"
            android:layout_width="369dp"
            android:layout_height="155dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="260dp"
            android:fontFamily="@font/avenir"
            android:text="@string/whether_you_re_a_high_level_researcher_or_a_member_of_the_general_public_neurosense_can_show_you_new_ways_of_understanding_the_brain"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_neurosense"
            app:layout_constraintVertical_bias="0.129" />

        <TextView
            android:id="@+id/access_description_text"
            android:layout_width="420dp"
            android:layout_height="63dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/avenir"
            android:text="@string/you_can_access_the_following_explanation_again_through_the_quot_about_app_quot_button_in_the_menu"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_neurosense"
            app:layout_constraintVertical_bias="0.705" />


        <TextView
            android:id="@+id/exit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/avenir"
            android:text="ⓧ"
            android:textColor="@color/dark_blue_variant_2"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/next_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="308dp"
            android:layout_marginTop="659dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/avenir"
            android:text="NEXT"
            android:textColor="@color/dark_blue_variant_2"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>